# HFT

./: README.md  bombard.sh  docker-compose.yml  index.html  index2.html  test_engine.sh
api-gateway/: Dockerfile  go.mod  go.sum  hub.go  kafka.go  main.go  models.go  state.go  websocket.go
db/: init.sql
hft-dashboard/: package-lock.json  package.json  tsconfig.json
hft-dashboard/app/: ActiveOrders.jsx  LiveTrades.jsx  OrderBook.tsx  OrderEntry.jsx  OrderForm.tsx  PriceChart.jsx  TradeTicker.jsx  globals.css  page.tsx
hft-load-test/: bomb.go  go.mod
matching-engine/: Cargo.toml  Dockerfile
matching-engine/src/: main.rs
matching-engine/src/engine/: book.rs  mod.rs  types.rs
settler/: Dockerfile  go.mod  go.sum  main.go
