[package]
name = "HFT"
version = "0.1.0"
edition = "2024"

[dependencies]
# The async runtime for handling network I/O
tokio = { version = "1.0", features = ["full"] }

# The Kafka client
rdkafka = { version = "0.36", features = ["cmake-build"] }

# For parsing the JSON bytes coming from Kafka
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"